--- a/css/styles.css
+++ b/css/styles.css
@@ -12,9 +12,12 @@ body {
 }
 .tooltip {
     position: absolute;
-    background-color: white;
-    border: 1px solid #d3d3d3;
-    padding: 5px;
+    text-align: center;
+    padding: 6px;
+    font: 12px sans-serif;
+    background: lightsteelblue;
+    border: 1px solid #999;
+    border-radius: 4px;
     pointer-events: none;
-    opacity: 0;
+    color: #000;
 }
