--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ body {
 }
 
 .hero-section {
-  position: relative;
+  position: full;
   height: 100vh;
   background: url("../img/background.webp") center/cover;
   display: flex;
@@ -53,6 +53,7 @@ body {
   justify-content: center;
   color: white;
   text-align: center;
+  width: 100%;
 }
 
 .hero-section::before {
@@ -62,7 +63,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(199, 170, 170, 0.5);
   backdrop-filter: blur(10px);
   z-index: 1;
 }
