--- a/css/styles.css
+++ b/css/styles.css
@@ -162,3 +162,33 @@ body {
   font-size: 1em;
   color: #666;
 }
+
+.inline-container {
+  display: flex;
+  align-items: center;
+  width: 90%;
+}
+
+.inline-container p {
+  margin-right: 15px; /* Add space between the text and the chart */
+}
+
+.text-box {
+  background-color: #fffec9;
+  padding: 10px 20px;
+  border-radius: 8px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  margin-right: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 150px;
+  text-align: center;
+}
+  
+.text-box p {
+  margin: 0;
+  font-size: 1rem;
+  font-weight: bold;
+  color: #333;
+}
