--- a/css/styles.css
+++ b/css/styles.css
@@ -93,8 +93,13 @@ body {
 }
 
 .info-section {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+}
+
+.circle-container {
   text-align: center;
-  margin-bottom: 20px;
 }
 
 .image-grid {
@@ -129,11 +134,6 @@ body {
   color: #666;
 }
 
-
-.circle-container {
-  text-align: center;
-}
-
 .circle-image {
   width: 200px;
   height: 200px;
@@ -141,12 +141,13 @@ body {
   overflow: hidden;
   margin: 0 auto;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: white;
 }
 
 .circle-image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  width: 80%;
+  height: 80%;
+  /* object-fit: cover; */
 }
 
 .circle-text {
@@ -185,7 +186,7 @@ body {
   min-width: 150px;
   text-align: center;
 }
-  
+
 .text-box p {
   margin: 0;
   font-size: 1rem;
