--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,170 @@
+/* Reset and Basic Styling */
+:root {
+  --gray: #d6dddcf6;
+  --dun: #E4CDA8;
+  --blue: #0b1957;
+  --saphire:#426bc2;
+  --desert-sand: #DFAF9A;
+  --white: #f8faf9;
+  --red: #FD6363;
+  --cream: #FCF3E3;
+  --lace: #f7f4ed;
+}
+
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  font-family: 'Arial', sans-serif;
 }
 
 body {
-  font-family: Arial, sans-serif;
-  color: #333;
-  margin-left: 20px;
+  background-color: var(--lace);
+  color: var(--blue);
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
+
+.sidebar {
+  /* position: fixed;
+  top: 30%;
+  left: 3%;*/
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0 5px 5px 0;
+
+  background: var(--blue);
+  font-size: 0.65em;
+}
+
+.nav {
+  text-align: center;
+  top: 50%;
+  font-weight: bold;
+}
+
+.nav ul {
+  list-style: none;
+  
+  li {
+    padding: 10px 0;
+    display: block;
+    justify-content: center;
+    align-self: center;
+    a {
+      line-height: 5em;
+      text-transform: uppercase;
+      text-decoration: none;
+      letter-spacing: 0.4em;
+      color: var(--white);
+      display: block;
+      transition: all ease-out 300ms;
+      padding: 10px;
+    }
+    
+    &.active a {
+      color: var(--gray);
+
+    }
+    
+    &:not(.active)::after {
+      opacity: 0.2;
+    }
+    
+    &:not(.active):hover a {
+
+      opacity: 0.1;
+    }
+    &:not(.active):hover a {
+      color: var(--white);
+
+      opacity: 0.1;
+    }
+    
+    &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 0.2em;
+      background: black;
+      left: 0;
+      bottom: 0;
+      background-image: linear-gradient(to right, var(--desert-sand), var(--red))
+    }
+  }
+}
+
+.tab-nav-container {
+  width: 15%; /* Container width to control overall nav width */
+  display: flex;
+  flex-direction: column;
+  /* Center the container on the page */
+}
+
+/* Tab Navigation Container */
+.tab-nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  background-color: var(--lace);
+  padding-top: 80px;
+  /* max-width: 600px; Optional: limit maximum width for larger screens */
+  border-radius: 0 5px 0 5px;
+  border: none;
+  box-shadow: none; 
+  min-height: 900px;
+}
+
+/* Individual Tab Item */
+.tab-item {
+  display: flex;
+  align-items: center;
+  padding: 8px 16px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  border-radius: 30px;
+  color: #3d2d5c;
+  font-size: 0.9em;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  margin: 10px 0;
+}
+
+/* Icon Styling */
+.icon {
+  margin-right: 8px; /* Space between icon and text */
+  width: 20px;       /* Adjust icon size */
+  height: 20px;
+  
+}
+
+/* Active Tab Styling */
+.tab-item.active {
+  background-color: var(--white);
+  color: #3d2d5c;
+  font-weight: 600;
+}
+
+/* Hover Effect */
+.tab-item:hover {
+  background-color: var(--white);
+  color: var(--blue)
+}
+
+/* Remove outline when clicking */
+.tab-item:focus {
+  outline: none;
+}
+/* Chart Styles */
 #chart {
   margin: 20px;
 }
+
 .tooltip {
   position: absolute;
   text-align: center;
@@ -24,6 +176,7 @@ body {
   pointer-events: none;
   color: #000;
 }
+
 .bar {
   stroke-width: 1;
   stroke: #333;
@@ -33,19 +186,22 @@ body {
   font-size: 14px;
 }
 
+/* Chart Container */
 #chart-container {
   display: flex;
   gap: 30px;
   flex-wrap: wrap;
 }
+
 .chart-title {
   text-align: center;
   font-size: 16px;
   margin-bottom: 10px;
 }
 
+/* Hero Section */
 .hero-section {
-  position: full;
+  position: relative;
   height: 100vh;
   background: url("../img/background.webp") center/cover;
   display: flex;
@@ -73,6 +229,7 @@ body {
   z-index: 2;
 }
 
+/* Button Styles */
 .buttons .button {
   margin: 10px;
   padding: 10px 20px;
@@ -87,21 +244,19 @@ body {
   background-color: #ccc;
 }
 
-.content {
-  padding: 50px 20px;
-  background-color: #f4f4f4;
-}
-
+/* Info Section */
 .info-section {
   display: flex;
   justify-content: center;
   gap: 50px;
 }
 
+/* Circle Container */
 .circle-container {
   text-align: center;
 }
 
+/* Image Grid */
 .image-grid {
   display: grid;
   gap: 20px;
@@ -121,7 +276,7 @@ body {
 }
 
 .image-card img {
-  width: 10%;
+  width: 100%;
   height: auto;
 }
 
@@ -134,6 +289,7 @@ body {
   color: #666;
 }
 
+/* Circle Image */
 .circle-image {
   width: 200px;
   height: 200px;
@@ -147,7 +303,7 @@ body {
 .circle-image img {
   width: 80%;
   height: 80%;
-  /* object-fit: cover; */
+  object-fit: cover;
 }
 
 .circle-text {
@@ -163,33 +319,140 @@ body {
   font-size: 1em;
   color: #666;
 }
-
+/* Inline Container */
 .inline-container {
   display: flex;
   align-items: center;
+  justify-content: flex-start; /* Align items to the left for better structure */
   width: 90%;
+  gap: 15px; /* Add spacing between elements */
 }
 
 .inline-container p {
-  margin-right: 15px; /* Add space between the text and the chart */
+  margin-right: 15px;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #555; /* Softer color for better readability */
 }
 
+/* Text Box */
 .text-box {
-  background-color: #fffec9;
-  padding: 10px 20px;
-  border-radius: 8px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  margin-right: 15px;
+  background-color: var(--cream);
+  padding: 15px 25px;
+  border-radius: 12px;
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.15); 
+  /* margin-right: 15px; */
   display: flex;
   align-items: center;
   justify-content: center;
-  min-width: 150px;
+  min-width: 180px; 
   text-align: center;
-}
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+} 
 
 .text-box p {
-  margin: 0;
-  font-size: 1rem;
-  font-weight: bold;
+  margin: 2;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
   color: #333;
+}
+
+/* Hover Effects */
+.text-box:hover {
+  transform: translateY(-3px); /* Subtle lift on hover */
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2); /* Enhance shadow on hover */
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+  .inline-container {
+    flex-direction: column; /* Stack items vertically on smaller screens */
+    width: 100%;
+    gap: 10px;
+  }
+
+  .text-box {
+    min-width: 100%; /* Allow full width on smaller screens */
+  }
+}
+
+/* Navbar */
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--blue);
+  padding: 15px 30px;
+  color: var(--white);
+}
+
+.navbar .logo {
+  font-size: 1.5em;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.navbar nav a {
+  margin-left: 20px;
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 1em;
+  transition: color 0.3s ease;
+}
+
+.navbar nav a:hover {
+  color: #f3d250;
+}
+
+
+/* Container and Sidebar */
+
+.container {
+  display: flex;
+  flex: 1;
+  padding: 20px;
+  gap: 20px;
+  width: 75%;
+}
+
+
+/* Content Area */
+
+.content {
+  background-color: var(--white);
+  border-radius: 50px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  flex: auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  margin-right: 50px;
+
+}
+
+.content-div {
+  height: 80%;
+  width: 70%;
+}
+
+.content-div.active {
+  display: block;
+}
+
+.content-div h2 {
+  color: #33475b;
+  margin-bottom: 10px;
+}
+
+.content-div p {
+  line-height: 1.6;
+  color: #555;
+}
+
+.charts-container {
+  margin-left: 18%;
+  height: 100%; 
+  border: none;
+  margin-right: 10%;
+  overflow-x: hidden;
 }
