--- a/css/styles.css
+++ b/css/styles.css
@@ -490,6 +490,9 @@ body {
   padding-left: 2%;
   padding-top: 2%;
   width: 80%;
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center;    /* Center vertically */
 }
 
 .content-div {
