--- a/css/styles.css
+++ b/css/styles.css
@@ -490,7 +490,7 @@ body {
   padding-left: 2%;
   padding-top: 2%;
   width: 80%;
-  display: flex;
+  /* display: flex; */
   justify-content: center; /* Center horizontally */
   align-items: center;    /* Center vertically */
 }
