--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://d3js.org/d3.v7.min.js"></script>
-    <link rel="stylesheet" href="../css/styles.css" />
+    <title>Expandable Sidebar Navigation</title>
+    <link rel="stylesheet" href="/static/css/styles.css">
 </head>
+
 <body>
     <div class="sidebar" id="sidebar">
         <div class="sidebar-header">
@@ -32,11 +34,12 @@
         </div>
     </div>
     <div class="content">
-    <h2>Annual CO2 Emmisions(per capita) of the year 1996</h2>
-      <div id="total-emissions"></div>  
-      <div id="switch-button"></div>
-      <script src="../js/map.js"></script>
+        <main>
+            {% block content %}{% endblock %}
+        </main>
     </div>
-    <script src="../js/base.js"></script>
+    <script src="/static/js/base.js"></script>
+
 </body>
+
 </html>
