--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
     <title>D3 Bar Chart</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="/static/css/styles.css" />
   </head>
   <body>
     <!-- Header Section with Blur Background -->
@@ -20,9 +20,9 @@
     <!-- Main Content Section -->
       <section class="info-section">
         <div class="circle-container">
-          <a href="html/bar.html">
+          <a href="/bar">
             <div class="circle-image">
-              <img src="img/bar_icon.gif" alt="section-one" />
+              <img src="/static/img/bar_icon.gif" alt="section-one" />
             </div>
           </a>
           <div class="circle-text">
@@ -32,9 +32,9 @@
         </div>
 
         <div class="circle-container">
-          <a href="html/snakey.html">
+          <a href="/snakey">
             <div class="circle-image">
-              <img style="height: 70%; margin-top: 30px; width: 70%;" src="img/alluvial-diagram.png" alt="section-two" />
+              <img style="height: 70%; margin-top: 30px; width: 70%;" src="/static/img/alluvial-diagram.png" alt="section-two" />
             </div>
           </a>
           <div class="circle-text">
@@ -44,9 +44,9 @@
         </div>
 
         <div class="circle-container">
-          <a href="html/map.html">
+          <a href="/map1">
             <div class="circle-image">
-              <img style="height: 70%; margin-top: 30px; width: 70%;" src="img/map.png" alt="section-three" />
+              <img style="height: 70%; margin-top: 30px; width: 70%;" src="/static/img/map.png" alt="section-three" />
             </div>
           </a>
           <div class="circle-text">
