--- a/app/templates/radar_chart.html
+++ b/app/templates/radar_chart.html
@@ -1,48 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://d3js.org/d3.v7.min.js"></script>
-    <link rel="stylesheet" href="../css/styles.css" />
-</head>
+{% block title %}Map{% endblock %}
 
-<body>
-    <div class="sidebar" id="sidebar">
-        <div class="sidebar-header">
-            <h2>Menu</h2>
-        </div>
-        <div class="sidebar-content">
-            <div class="accordion">
-                <a href="../index.html" class="accordion-btn" id="homelink">Home</a>
+{% block content %}
 
-                <button class="accordion-btn" onclick="toggleDropdown('section2')">
-                    Comparing Categories
-                </button>
-                <div class="dropdown-content" id="section2">
-                    <a href="../html/bar.html">Bar charts</a>
-                    <a href="../html/stacked.html">Stacked charts</a>
-                    <a href="../html/heatmap.html">Heatmap</a>
-                </div>
-                <a href="../html/snakey.html" class="accordion-btn" id="snakey">Alluvial</a>
+<h2>Global Warming</h2>
 
-                <button class="accordion-btn" onclick="toggleDropdown('section3')">
-                    Maps
-                </button>
-                <div class="dropdown-content" id="section3">
-                    <a href="../html/map.html">Choropleth map (1)</a>
-                    <a href="../html/choropleth2.html">Choropleth map (2)</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="content">
-
-        <h1>Radar Chart</h1>
-        <div id="radar_chart"></div>
-        <script src="../js/radar_chart.js"></script>
-    </div>
-</body>
-
-</html>
+{% endblock %}
