render using fast api

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,18 +2,26 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-    <script src="https://unpkg.com/d3-sankey@0.12.3/dist/d3-sankey.min.js"></script>
+    
     <title>{% block title %}VizWizards{% endblock %}</title>
     <link rel="stylesheet" href="/static/css/styles.css">
+    <!-- Add Angular Material CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.24/angular-material.min.css">
+    
+    <!-- Load all scripts in correct order -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-animate.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-aria.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.24/angular-material.min.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="https://unpkg.com/d3-sankey@0.12.3/dist/d3-sankey.min.js"></script>
+    
     {% block extra_styles %}{% endblock %}
 
 </head>
 
-<body>
+<body ng-app="myApp">
+    
     <div class="sidebar" id="sidebar">
         <div class="sidebar-header">
             <h2>Menu</h2>
@@ -43,8 +51,8 @@
             {% block content %}{% endblock %}
         </main>
     </div>
-    <script src="/static/js/base.js"></script>
-
+   
+<script src="/static/js/base.js"></script>
 </body>
 
 </html>
