--- a/app/templates/radar_chart.html
+++ b/app/templates/radar_chart.html
@@ -1,11 +1,36 @@
 {% extends "base.html" %}
 
-{% block title %}Map{% endblock %}
+{% block title %}Radar{% endblock %}
 
 {% block content %}
+<div ng-controller="FormController">
+    <form ng-submit="generateSpiderPlot()">
+        <div>
+            <label for="state">Select a State:</label>
+            <select id="state" 
+                    ng-model="formData.state" 
+                    ng-options="state as state.name for state in stateList">
+                <option value="">-- Choose a State --</option>
+            </select>
+        </div>
+        
+        <div>
+            <label>Select Years (up to 10):</label>
+            <select multiple 
+                    ng-model="formData.years"
+                    ng-options="year for year in years">
+            </select>
+        </div>
 
-<h2>Global Warming</h2>
-<div id="radar_chart"></div>
-<script src="/static/js/radar_chart.js"></script>
+        <button type="submit">Generate Spider Plot</button>
+    </form>
 
+    <!-- Add debug info -->
+    <div>
+        <p>Selected State: {% raw %}{{formData.state.name}}{% endraw %}</p>
+        <p>Selected Years: {% raw %}{{formData.years}}{% endraw %}</p>
+    </div>
+</div>
+<script src="/static/js/radar_chart.js"></script> 
+<!-- Move script to head section in base.html instead -->
 {% endblock %}
