--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,13 +5,14 @@
     
     <title>{% block title %}VizWizards{% endblock %}</title>
     <link rel="stylesheet" href="/static/css/styles.css">
-    <!-- Add Angular Material CSS -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.24/angular-material.min.css">
-    
-    <!-- Load all scripts in correct order -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@300;400;500&display=swap">
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-animate.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-aria.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-messages.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.24/angular-material.min.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://unpkg.com/d3-sankey@0.12.3/dist/d3-sankey.min.js"></script>
@@ -43,6 +44,13 @@
                     <a href="/map1">Choropleth map (1)</a>
                     <a href="/map2">Choropleth map (2)</a>
                 </div>
+
+                <button class="accordion-btn" onclick="toggleDropdown('section4')">Climate Insights</button>
+                <div class="dropdown-content" id="section4">
+                    <a href="/radar">Yearly Spider Plot</a>
+                </div>
+
+
             </div>
         </div>
     </div>
