--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -47,6 +47,7 @@
 
                 <button class="accordion-btn" onclick="toggleDropdown('section4')">Climate Insights</button>
                 <div class="dropdown-content" id="section4">
+                    <a href="/line">Yearly Line Chart</a>
                     <a href="/radar">Yearly Spider Plot</a>
                 </div>
 
