--- a/app/templates/linechart.html
+++ b/app/templates/linechart.html
@@ -8,7 +8,7 @@
     <h1 class="form-title">Exploring Climate Trends: A Web of Monthly Temperatures</h1>
     <p class="form-description mat-body-1">
     This is the line chart part where you can choose the years(up tp 10 years) and states of America.
-    You can see the linechart for the maximum and the minimumvof monthly temperature , also a scatter plot for 
+    You can see the linechart for the maximum and the minimum of monthly temperature , also a scatter plot for 
     the average temperature after choosing the years and the states.
     
     </p>
